--- a/.github/ISSUE_TEMPLATE/バグの報告.md
+++ b/.github/ISSUE_TEMPLATE/バグの報告.md
@@ -1,18 +1,18 @@
 ---
 name: バグの報告
 about: 問題を発見した場合
-title: '○○な問題[BUG]'
+title: '[BUG]○○な問題'
 labels: bug
 assignees: jikantoki
 ---
 
 ## バグのタイトル
 
-50文字以内で入力
+50 文字以内で入力
 
 ## バグの説明
 
-○○を開いたときに○○をクリックすると表示がおかしい
+○○ を開いたときに ○○ をクリックすると表示がおかしい
 
 ## ブランチ
 
@@ -29,4 +29,4 @@ Windows？Mac？Android？
 
 ## スクリーンショット
 
-ここでCtrl + Vで貼りつけ
+ここで Ctrl + V で貼りつけ
