--- a/.github/ISSUE_TEMPLATE/新機能の開発.md
+++ b/.github/ISSUE_TEMPLATE/新機能の開発.md
@@ -1,14 +1,14 @@
 ---
 name: 新機能の開発
 about: 機能を増やしたい場合
-title: '○○をできるようにする[Feature]'
+title: '[Feature]○○をできるようにする'
 labels: ''
 assignees: jikantoki
 ---
 
 ## 機能名
 
-50文字以内でタイトルを入力
+50 文字以内でタイトルを入力
 
 ## 説明
 
@@ -16,7 +16,7 @@ assignees: jikantoki
 
 ## UI
 
-どんなUIが欲しいか
+どんな UI が欲しいか
 
 ## 機能要件
 
@@ -25,4 +25,4 @@ assignees: jikantoki
 
 ## 似たようなサービス
 
-競合サービスや参考にしたいサービスのURLを貼り付け
+競合サービスや参考にしたいサービスの URL を貼り付け
